# rust

./: README.md
projects/: README.md
projects/cows_and_bulls_gui/: Cargo.toml  beyond_day1_day2_concepts.md  egui_explained.md
projects/cows_and_bulls_gui/src/: main.rs
projects/games/number_guessing_game/: Cargo.toml
projects/games/rebel_alliance_command/: Cargo.toml  GAME_GUIDE.md
rust_day1/01_variables_and_basics/: Cargo.toml
rust_day1/01_variables_and_basics/src/: exercises.rs  main.rs  mini_exercises.rs
rust_day1/02_control_flow/: Cargo.toml
rust_day1/02_control_flow/src/: ifelse.rs
rust_day1/03_functions_and_ownership/: Cargo.toml
rust_day1/03_functions_and_ownership/src/: user.rs
rust_day1/day1_practice/: Cargo.toml
rust_day1/day1_practice/src/: exercises.rs  exercises_2.rs  ifelse.rs  main.rs  mini_exercises.rs  miniproject.rs  parse_and_unwrap.md  user.rs
rust_day1/number_guessing_game/: Cargo.toml
rust_day1/number_guessing_game/src/: main.rs
rust_day1/temp_files/: tempCodeRunnerFile.rs
rust_day2/01_ownership_and_borrowing/: Cargo.toml
rust_day2/02_functions_and_structs/: Cargo.toml
rust_day2/03_enums_and_pattern_matching/: Cargo.toml
rust_day2/04_error_handling/: Cargo.toml
rust_day2/04_error_handling/src/: config.txt  custom_errors.rs  file_operations.rs  question_operator.rs  result_basics.rs  result_methods.rs  result_vs_option.rs
rust_day2/day2_practice/: Cargo.toml
rust_day2/rebel_alliance_command/: CODE_EXPLANATION.md  Cargo.toml  STRATEGY_GUIDE.md
rust_day2/string_tinkerer_game/: Cargo.toml
(+46 files in other folders)
