[package]
name = "error_handling"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "result_basics"
path = "src/result_basics.rs"

[[bin]]
name = "result_methods"
path = "src/result_methods.rs"

[[bin]]
name = "question_operator"
path = "src/question_operator.rs"

[[bin]]
name = "file_operations"
path = "src/file_operations.rs"

[[bin]]
name = "custom_errors"
path = "src/custom_errors.rs"

[[bin]]
name = "result_vs_option"
path = "src/result_vs_option.rs"

[dependencies]
